# RawImageData

./: .gitignore  CMakeLists.txt  README.md
src/: jpegimagedata.cpp  jpegimagedata.h  main.cpp  rawimagedata.cpp  rawimagedata.h  rawimagedata_nikon.cpp  rawimagedata_nikon.h  rawimagedata_utils.cpp  rawimagedata_utils.h
src/rawimagedata/: jpegimagedata.h  rawimagedata.cpp  rawimagedata.h  rawimagedata_utils.h
src/rawimagedata/cameras/: canon_raw.cpp  canon_raw.h  nikon_raw.cpp  nikon_raw.h
src/rawimagesource/: jpegimagedata.cpp  rawimagedata.cpp  rawimagedata.h  rawimagedata_utils.cpp
src/rawimagesource/cameras/: nikon_raw.cpp  nikon_raw.h
